--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,14 @@
     <!-- Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
+        //system js 
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
 </head>
 
 <body>
-    <pm-app></pm-app>
-    Starter files
+    <pm-app>Loading App....</pm-app>
+   
 </body>
 
 </html>
