--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 <html>
 
 <head lang="en">
+    <base href="/">
     <title>Acme Product Management</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
